Initial draft for Code Resource Use Case article

--- a/docs/usecase/sfmc-code-resources.mdx
+++ b/docs/usecase/sfmc-code-resources.mdx
@@ -1,16 +1,17 @@
 ---
-id: mvvm-pattern-in-marketing-cloud
-title: MVVM Pattern in Marketing Cloud
-description: Divide and conquer your SFMC Cloud Page solutions with MVVM Design Pattern
-image: img/og/og-image-solve-with-cloud-apps.png
+id: sfmc-code-resources
+title: Conquer with SFMC Code Resources
+sidebar_label: Conquer with Code Resources
+description: WIP
+image: img/og/og-image-conquer-with-sfmc-code-resources.png
 tags: [Marketing Cloud, SSJS, AMPScript, Snippet, Cloud Page, Pattern]
 ---
-
+// TODO Image
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content="Divide and conquer your SFMC Cloud Page solutions with MVC Design Pattern" />
+<LeadText content="Divide and conquer your SFMC Cloud Page solutions" />
 
-## What is MVC?
+## What is Code Resource?
 
 Before diving into Marketing Cloud world, let's start with the basics. Model-View-ViewModel (MVVM) is a software design pattern focused on simplicity and readability.
 
